--- a/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Martin.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Martin.tex
@@ -1,1 +1,6 @@
 \subsubsection{Martin Carpentier}
+
+I dette projekt har jeg opnået erfaring indenfor mange forskellige emner. Jeg har haft flere betydelige problemer med git, som har betydet at jeg har været tvunget til at gå i dybden med hvordan man benytter sig af redskabet. Derudover har jeg brugt meget tid i WPF og derigennem har lært meget om hvordan man opsætter grænseflader, samt tilknyttede viewmodels i henhold til MVVM. Da jeg fandt det spændende har det også endt ud i, at jeg har søgt praktikjob i et job hvor jeg kunne få lov til at arbejde med WPF og grænseflader. \\
+Mindre teknisk har jeg lært hvordan man arbejder iterativt og hvordan man arbejder sammen med forskellige typer mennesker. Dette mener jeg kan være en stor fordel for mig ude i erhvervslivet.\\
+
+Jeg mener dette semesterprojekt har været et af de første hvor man har haft den nødvendige erfaring til at bygge et større system. Dette har også betydet at semesterprojektet har givet endnu større boost til den arbejdsmængde der har været lagt  og samtidig derfor også mere erfaring.
