--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Backend.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Backend.tex
@@ -9,7 +9,11 @@ Administrationssystem softwaren var først lavet med funktionaliteten i codebehi
 Det visuelle design og funktionaliteten til at vise produkter og kategorier blev lavet i starten af udviklingen. Efter dette skulle kommunikationen mellem Administrationssystem og CentralServer på plads. Implementeringen af CentralServer satte en standard for, hvordan og hvornår data blev sendt frem og tilbage mellem CentralServer og de andre delsystemer, og derfor skulle der blot laves kommunikation for Administrationssystem der opfyldte disse krav. Det primære krav var, at Administrationssystem kontinuert skulle lytte på indkommende data, da der kunne blive sendt vigtig data på alle tidspunkter, også selvom den pågældende instans af Administrationssystem ikke havde anmodet CentralServer om noget.
 
 \subsubsection{Implementering}
+I det følgende afsnit vil der kunne læses om implementeringen af Administrationssystem, hvilke udfordringer der har været og hvorledes disse er løst.\\
 Det endelige design af Administrationssystemet er implementeret med MVVM som det primære design. Designet af den grafiske brugerflade holder sig op af det skitserede design.\\
+
+
+\subsubsection{Presentation layer}
 Administrationssystem fungerer sådan, at ved start af programmet åbnes et hovedvindue, der viser systemets nuværende produkter samt produktaktegorier. Herfra er der knapper til resten af programmets funktionalitet, som indebærer opret, rediger og slet af produkter og kategorier. Produkter og kategorier kan markeres på den pågældende liste og ved sletning eller redigering slettes/ændres der på det markerede element.\\
 
 \begin{figure}[H]
@@ -31,7 +35,8 @@ Figur \ref{fig:admindemo} viser det endelige design af Administrationssystemets 
 	\item Dette er kategorilisten. Når der vælges en kategori på denne liste, så vil kategoriens produkter blive vist på produktlisten (punkt 7).
 \end{enumerate}
 
-\textbf{Intern kommunikation}\\
+\subsubsection{Business logic layer}
+
 Administrationssystemet,s som er opbygget vha. MVVM design mønstret, benytter viewmodels til alle dets views. Det betyder at der for hver vindue, er en tilhørende viewmodel. Denne viewmodel indeholder datamodeller som viewet binder til, og fremviser dette. Fordelen er tydelig – der er lav kobling igennem det meste af systemet. Ulempen viser sig når der skal deles data: For at få data fra hovedvinduets viewmodel, som har alle produkter mv., til en sub-viewmodel (så som ”rediger produkt” vinduet), skal dataen flyttes ind i viewet og derefter ned i dets viewmodel. Det er ikke holdbart, det skaber høj kobling og gør hele systemet mere besværligt at vedligeholde.
 Det problem er løst vha. events og PRISM EventAggregator~\cite{PRISM}.
 
@@ -48,7 +53,7 @@ På den måde opnås stadig den lave kobling, men data bliver sendt rundt i syst
 Ønskes der yderligere specifikation, henvises der til dokumentationen, afsnit dillerdaller.\\
 
 
-\textbf{Kommunikation}\\
+\subsubsection{Data access layer}
 Kommunikationen mellem Administrationssystem og CentralServer har to dele. Den første er at sende data til CentralServer, den anden er at modtage data. Den data der sendes og modtages er i XML-format. Et eksempel på data der bliver sendt og modtaget mellem Administrationssystem og CentralServer kan ses på nedenstående sekvensdiagram, figur \ref{fig:adminsekvens}.
 
 \begin{figure}[H]
