--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImple.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImple.tex
@@ -1,6 +1,6 @@
 \section{Design og Implementering}
 
-\subsection{Indledning} \\
+\subsection{Indledning}
 
 Da arbejdet med udviklingen af softwaren skulle blev der taget udgangspunkt i den opsatte domænemodel på figur \ref{fig:domain} side~\pageref{fig:domain}. Design og implementeringen af hver del vil blive beskrevet i afsnittene herunder.
 
