Intro to test, and changed testbeskrivelser

--- a/LaTeX/Projektdokumtation/Test/Test.tex
+++ b/LaTeX/Projektdokumtation/Test/Test.tex
@@ -1,4 +1,6 @@
 \chapter{Test}
+I det følgende afsnit er der beskrevet hvordan delsystemerne er blevet testet. Afsnittet er delt op i hhv. unit- og integrationstest, og er i hvert underafsnit delt op i hver delsystem.\\
+
 
 \input{Test/UnitTest}
 \input{Test/IntegrationsTest}
