--- a/LaTeX/Projektdokumtation/Test/UnitTest.tex
+++ b/LaTeX/Projektdokumtation/Test/UnitTest.tex
@@ -1,4 +1,6 @@
 \section{Unit Test}
+I det følgende afsnit er der beskrevet hvordan delsystemerne er blevet unittestet. Testene er lavet vha. NUnit~\cite{NUnit} og NSubstitute~\cite{NSubstitute} og coverage analyse er foretaget med dotCover~\cite{dotCover}. Det hele er samtidig blevet bygget løbende på en continuous integration server, mere specifikt Jenkins.~\cite{Jenkins}.\\
+
 \input{Test/Unittest/SharedLib_unit}
 \input{Test/Unittest/Backend_unit}
 \input{Test/Unittest/Frontend_unit}
