--- a/LaTeX/Projektdokumtation/Test/Unittest/Frontend_unit.tex
+++ b/LaTeX/Projektdokumtation/Test/Unittest/Frontend_unit.tex
@@ -5,8 +5,7 @@ I de følgende afsnit vil der kunne læses om unittests for \gls{KA}.\\\\
 \gls{KA} har været testet itterativt over udviklingsperioden. Det har bidgraget væsentligt med at finde små fejl, som ellers var gået igennem. I de nedenstående afsnit vil der kunne læses om hvordan der er testet, med hvilke frameworks og mere konkrete tal.\\
 
 \textbf{Testdetaljer}\\
-I \gls{KA} er der en total testcoverage på \textit{72} procent af testbare klasser\footnote{GUI, eksterne klasser, XML mv er \textit{ikke} en del af testbare klasser.}. Dette summerer sig op til 51 unittests, som er fordelt over ViewModels, Business Logic og Data Access. Testene er lavet
-vha. NUnit~\cite{NUnit} og NSubstitute~\cite{NSubstitute} og coverage analyse er foretaget med dotCover~\cite{dotCover}.
+I \gls{KA} er der en total testcoverage på \textit{72} procent af testbare klasser\footnote{GUI, eksterne klasser, XML mv er \textit{ikke} en del af testbare klasser.}. Dette summerer sig op til 51 unittests, som er fordelt over ViewModels, Business Logic og Data Access.
 
 \begin{figure}[H]
 	\centering
