--- a/LaTeX/Projektdokumtation/Test/Unittest/SharedLib_unit.tex
+++ b/LaTeX/Projektdokumtation/Test/Unittest/SharedLib_unit.tex
@@ -6,7 +6,7 @@ I de følgende afsnit vil der kunne læses om unittests for \gls{SL}.\\\\
 \gls{SL} har været testet iterativt som en del af projektets sprints, hvilket har betydet at der gennemgående har været minimale ændringer i eksisterende kode. I de følgende afsnit vil der blive beskrevet yderligere hvordan unittesting har fungeret og hvilke værktøjer der har været brugt.\\
 
 \textbf{Testdetaljer}\\
-I \gls{SL} er der en total testcoverage på \textit{96 procent} og dette er fordelt på \textit{249} unittests. Størstedelen af disse, \textit{177}, ligger i CmdMarshallers som også er der det meste af \gls{SL}'s logik ligger. Tests er lavet ved hjælp af NUnit~\cite{NUnit} og NSubstitute~\cite{NSubstitute} og coverage analyse er foretaget med dotCover~\cite{dotCover}. Det hele er samtidig blevet bygget løbende på en continuous integration server, mere specifikt Jenkins.~\cite{Jenkins}.
+I \gls{SL} er der en total testcoverage på \textit{96 procent} og dette er fordelt på \textit{249} unittests. Størstedelen af disse, \textit{177}, ligger i CmdMarshallers som også er der det meste af \gls{SL}'s logik ligger. 
 
 \begin{figure}[H]
 	\centering
