--- a/LaTeX/Projektrapport/Projektbeskrivelse/Metoder.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Metoder.tex
@@ -16,4 +16,4 @@ I starten af projektet blev der udarbejdet en tidsplan for hele forløbet. Denne
 Gruppen har brugt Git (via github.com) til versionsstyring af projektet. Dette har både omfattet kildekode, dokumentation og rapport. \\
 
 \textbf{Continous Integration} \\
-Gruppen har brugt skolens Jenkins server, til løbende at køre unit- og integrationstests. \\
+Gruppen har brugt skolens Jenkins server, til løbende at køre unit- og integrationstests samt holde styr på Coverage ved tests. \\
