So nice, so simple

--- a/LaTeX/Projektrapport/Projektbeskrivelse/ResultaterOgDiskussion.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/ResultaterOgDiskussion.tex
@@ -14,4 +14,4 @@ CentralServer kan kommunikere med både Administrationssystem og Kasseapparat. C
 
 \textbf{SharedLib}\\
 Alle tre systemer gør brug af et fælles bibliotek, kaldet SharedLib, hvor funktionalitet til at encode og decode kommandoer til XML ligger. Dette samler funktionaliteten, så delsystemerne ikke selv skal implementere den samme funktionalitet flere gange.\\
-Når al funktionaliteten er samlet et sted betyder også, at alle tre delsystemer kommunikerer på præcis samme måde, så der altid er vished om, at protokollen mellem delsystemerne overholdes.\\
+Når al funktionaliteten er samlet et sted betyder dette også, at alle tre delsystemer kommunikerer på præcis samme måde, så der altid er vished om, at protokollen mellem delsystemerne overholdes.\\
