--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Design.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Design.tex
@@ -41,7 +41,7 @@ Næste punkt O, Open-Closed princippet, der ligger op til at systemet skal være
 
 L'et i SOLID er Liskov's substitutions princip og dette siger at du skal kunne bytte rundt på en subklasse og den klasse denne arver fra, uden at programmet bemærker dette. Dette er i \gls{SL} også tilfældet. Det eneste sted der er arv, er fra Command klassen og til de forskellige kommandoer men da disse kun indeholder attributter og det der arves ligeledes er en attribut, så er Liskovs' substitutions princip ikke relevant for systemet, dog skal det nævnes at princippet ikke er brudt.
 
-I'et var Interface Segregation og betød at hvis der ønskes en specifik funktion i et større system, som bør der så vidt muligt være interfaces der sørger for at den ønskede funktionalitet kan tilgås uden at være tvunget til at tage stilling til og håndtere unødvendige funktioner. Dette opnådede protokollen også da der blev indført interfaces for alle klasser på når Commands som derimod blev en abstrakt klasse der blev nedarvet fra.
+I'et var Interface Segregation og betød at hvis der ønskes en specifik funktion i et større system, som bør der så vidt muligt være interfaces der sørger for at den ønskede funktionalitet kan tilgås uden at være tvunget til at tage stilling til og håndtere unødvendige funktioner. Dette opnådede protokollen også da der blev indført interfaces for alle klasser på nær Commands som derimod blev en abstrakt klasse der blev nedarvet fra.
 
 D'et og det sidste punkt i SOLID er Dependency inversion og kræver at afhængigheder skal komme nede fra og op. Ment som at en superklasse ikke skal kende til klasser i lavere lag på trods af at den måske bruger dem aktivt, dette skal fungerer via et interface i samme lag, som så bliver implementeret af en klasse i et lavere lag der her udfører disse handlinger. Dette fik protokollen også indført med de mange interfaces der her kunne sørge for at alt afhængighed kom nedefra. Protocol klassen kender f.eks. ikke den XmlMarshaller der finder den korrekte marshaller at bruge, den har et IProtocolMarshaller interface som XmlMarshaller implementere. Det samme for XmlMarshaller der ikke kender til de enkelte marshallers men derimod arbejder med ICmdMarshaller som de forskellige marshallers så har implementeret.\\
 
