--- a/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Jakob.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Jakob.tex
@@ -1,1 +1,6 @@
 \subsubsection{Jakob Kristensen}
+Jeg har udviklet CentralServer, og har i den forbindelse benyttet meget af den teori, vi har haft både i løbet dette semester og tidligere semestre.\\
+
+På sidste semesterprojekt (3. semester) udviklede jeg noget, som umiddelbart ligner det, jeg har udviklet i løbet af dette projekt. Den primære årsag til, at det alligevel var mig, der kom til at lave CentralServer var, at de andre fra gruppen gerne ville prøve at lave software, der indeholdte en grafisk brugergrænseflade. Jeg valgte mig derfor frivilligt (som den eneste) til CentralServer, da grafiske brugergrænseflader ikke fanger min interesse. Det har imidlertid givet mig en masse insigt i de discipliner indenfor C\# som CentralServer har indebåret, herunder multitrådet programmering og databaser.\\
+
+Jeg har også i løbet af dette projekt opnået erfaringer der betyder, at skulle jeg implementere CentralServer forefra, ville jeg have lavet flere ting anderledes. Det er viden jeg især har opnået ifm. fagene softwaredesign- og test.
