--- a/LaTeX/Projektrapport/preamble.tex
+++ b/LaTeX/Projektrapport/preamble.tex
@@ -85,3 +85,5 @@
    {\normalfont\Large\bfseries\color{blue} }
 \titleformat*{\subsection}
    {\normalfont\Large\bfseries\color{lblue} }
+\titleformat*{\subsubsection}
+	{\normalfont\large\bfseries\color{lblue} }
