--- a/LaTeX/Projektdokumtation/Accepttest/UCT5.tex
+++ b/LaTeX/Projektdokumtation/Accepttest/UCT5.tex
@@ -28,7 +28,7 @@ Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hlin
 Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hline
 1 & \gls{SB} vælger "Test\gls{PD} 1" & Test\gls{PD} 1 markeres i \gls{PD}listen & Markeres & OK \\\hline
 2 & \gls{SB} trykker på knappen til rediger \gls{PD} & Et nyt vindue præsenteres for \gls{SB}, som viser hhv. pris, navn, stregekode og nuværende \gls{PDK} for det markerede "Testpodukt 1" & Korrekt fremvisning & OK \\\hline
-3 & \gls{SB} trykker på knappen til Annuller & Vinduet til rediger \gls{PD} lukkes & \\
+3 & \gls{SB} trykker på knappen til Annuller & Vinduet til rediger \gls{PD} lukkes & Vinduet lukkes & OK\\
 \hline
 \end{tabularx}
 \caption{Accepttest 4: Rediger \gls{PD}, ext. 1}
