--- a/LaTeX/Projektdokumtation/Accepttest/UCT9.tex
+++ b/LaTeX/Projektdokumtation/Accepttest/UCT9.tex
@@ -30,9 +30,9 @@ Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hlin
 Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hline
 1 & \gls{SB} vælger Testkategori 1 i kategorilisten & Testkategori 1 markeres. & Den markeres & OK \\\hline
 2 & \gls{SB} trykker på knappen til Slet Kategori & En dialogboks åbnes hvori Testkategori vises  & Kategorien vises & OK \\\hline
-3 & \gls{SB} trykker på knappen til Slet & Vinduet til slet produkter og information lukkes  &  Vinduet lukkes & OK \\
+3 & \gls{SB} trykker på knappen til Slet & Vinduet til slet produkter og information lukkes  &  Vinduet lukkes & OK \\ \hline
 4 & \gls{SB} observerer kategorilisten & Testkategori 1 forsvinder fra listen & Kategorien forsvinder & OK \\\hline 
-\hline
+
 \end{tabularx}
 \caption{Accepttest 8: Slet produktkategori, extension 2}
 \label{tab:ATspk}
