--- a/LaTeX/Projektdokumtation/Systemdesign/Systemdesign.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Systemdesign.tex
@@ -1,4 +1,5 @@
 \chapter{Systemdesign}
+I det følgende afsnit vil der kunne læses om hvordan delsystemerne er designet og implementeret. Afsnittene er delt op i delsystemer, med individuelle afsnit.
 
 \input{Systemdesign/SharedLibDesign}
 \newpage
