--- a/LaTeX/Projektrapport/Projektbeskrivelse/FremtidigtArbejde.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/FremtidigtArbejde.tex
@@ -1,3 +1,4 @@
 \section{Fremtidigt arbejde}
 
+\input{Projektbeskrivelse/FremtidigtArbejde/Frontend}
 \input{Projektbeskrivelse/FremtidigtArbejde/Backend}
