--- a/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Andreas.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Andreas.tex
@@ -1,1 +1,18 @@
 \subsubsection{Andreas Engelbrecht}
+I projektet har min hovedopgave været udviklingen af SharedLib. 
+På 3. semester lavede jeg den grafiske brugergrænseflade og jeg ønskede derfor dette semester at prøve noget nyt, og derfor blev protokol udvikling og design og arkitektur mit flagskib.
+
+Der er blevet brugt git og iterativ projektstyring som ikke var nyt for mig, men det er første gang jeg har benyttet det i et større softwareprojekt og det har helt klart rustet mig til fremtiden og dette er bestemt ikke noget jeg har tænkt mig at gå fra igen.
+
+Jeg har igennem projektet primært skulle koncentrere mig om designet og hvordan protokollen blev så brugervenlig og forståelig som overhovedet muligt for de andre udviklere.
+
+Det har været en utroligt spændende process og jeg har trukket utroligt meget på både softwaredesign og softwaretest fagene og hen af vejen prøvet at implementere disse elementer hvor det var muligt. 
+
+Det at se hvordan små ændringer i min .dll kunne gøre livet nemmere for mine medstuderende og hele tiden have en korrespondence mellem dem som brugere af mit "produkt" og kunne tilpasse det så det hele spillede var helt sikkert en fed oplevelse der gav mig rigtig meget som udvikler og gjorde at man lige gav den lidt ekstra på finesserne for at optimere.  
+
+Jeg har derudover fungere som projektleder for gruppen og det har spillet godt sammen med min del af systemet der gjorde at jeg gennemgående havde et godt overblik over de forskellige delsystemer.
+
+
+
+
+
