--- a/LaTeX/Projektrapport/Projektbeskrivelse/FremtidigtArbejde.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/FremtidigtArbejde.tex
@@ -1,3 +1,3 @@
 \section{Fremtidigt arbejde}
-
+\input{Projektbeskrivelse/FremtidigtArbejde/SharedLib}
 \input{Projektbeskrivelse/FremtidigtArbejde/Backend}
