changes to test text

--- a/LaTeX/Projektdokumtation/Test/Unittest/SharedLib_unit.tex
+++ b/LaTeX/Projektdokumtation/Test/Unittest/SharedLib_unit.tex
@@ -25,4 +25,4 @@ I \gls{SL} er der en total testcoverage på \textit{96 procent} og dette er ford
 
 \newpage
 \textbf{Beskrivelse af tests}\\
-I \gls{SL} har størstedelen af unittests som det ses på figur \ref{fig:antalunitSL} omhandlet marshallerne\footnote{Marshallers er nærmere beskrevet i afsnit \ref{MARSHALLER} på side \pageref{MARSHALLER}}, da disse klart indeholder mest logik og størst kompleksitet. Marshallernes Encode/Decode funktioner, gjorde at der skulle en del tests til at dække grænseværdierne. derfor endte dette ud i et utroligt højt antal af tests. Enkelte funktioner i forskellige model klasser samt Sockets\footnote{Sockets klasserne: CommandListener og SocketConnection er nærmere beskrevet i afsnit \ref{SOCKET} på side \pageref{SOCKET}} klasserne blev ikke testet i dette afsnit da disse blev brugt i forbindelse med andre systemer og er derfor testet andetsteds.
+I \gls{SL} har størstedelen af unittests som det ses på figur \ref{fig:antalunitSL} omhandlet marshallerne\footnote{Marshallers er nærmere beskrevet i afsnit \ref{MARSHALLER} på side \pageref{MARSHALLER}}, da disse klart indeholder mest logik og størst kompleksitet. Marshallernes Encode/Decode funktioner, gjorde at der skulle en del tests til at dække grænseværdierne. derfor endte dette ud i et utroligt højt antal af tests. Enkelte funktioner i forskellige model klasser samt Sockets\footnote{Sockets klasserne: CommandListener og SocketConnection er nærmere beskrevet i afsnit \ref{SOCKET} på side \pageref{SOCKET}} klasserne blev ikke testet i dette afsnit da disse blev brugt i forbindelse med andre systemer. Socket klasserne viste sig dog generelt at være så svære at teste at dette var helt uden for scope af det vi havde lært om i softwaretest faget. Så det blev derfor vurderet at en funktionel test af disse var tilstrækkeligt.
