Added experience section for DENZ

--- a/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Dennis.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Dennis.tex
@@ -1,2 +1,8 @@
 \subsubsection{Dennis Tychsen}
-I dette projekt har jeg arbejdet med at udvikle en GUI applikation. Dette har gjort, at jeg har fået en masse erfaring indenfor WPF.
+I dette projekt har jeg primært beskæftiget mig med at udvikle Administrationssystemet, samt hjulpet til med at implementering håndteringen af nogle kommandoer i CentralServer, som ikke var implementeret. Dette indebar at udvikle en grafisk brugerflade, med tilhørende bagvedliggende funktionalitet. Udviklingen af Administrationssystemet har givet en god praktisk erfaring indenfor WPF og GUI har givet større forståelse for de grundlæggende principper i en GUI applikation.\\
+I forhold til CentralServer skulle der implementeres håndtering af nogle kommandoer, hvilket betød at jeg blev nødt til at læse og forstå en anden persons kode, for derefter selv at kunne bygge videre på den eksisterende kode. Det var interessant at prøve og var en spændende udfordring.\\
+
+Der er arbejdet agilt med principper fra Scrum, og brugt versionsstyring med Git. Jeg har stået for at være projektets Git- og Jenkins master, hvilket betød at jeg skulle sætte projektet op på Github og på Jenkins serveren, samt holde struktur på Git. Jeg har især stået for at løse merge-problemer, når disse opstod.\\
+Administrationssystemet er testet ved hjælp af NUnit og NSubstitute, hvilket har givet praktisk erfaring indenfor software test og dets principper.\\
+
+Udover alt dette har det været lærerigt at arbejde på det hidtil største softwareprojekt vi har lavet på studiet. Det har givet indsigt i, hvordan store projekter med mange elementer hænger sammen, og hvordan disse kan bygges op, så projektet er til at overskue. Det har gjort, at jeg ikke er nervøs for at møde et stort og omfattende projekt, i mit videre studie- og arbejdsliv.
