--- a/LaTeX/Projektrapport/Resume/Resume.tex
+++ b/LaTeX/Projektrapport/Resume/Resume.tex
@@ -1,14 +1,14 @@
 \section*{Resumé}
-Dette projekt er udviklet af seks studerende fra Ingeniørhøjskolen I Aarhus (Aarhus Universitet). Formålet er at lave et tværfagligt projekt der dækker over de 5 kurser der har været udbudt på fjerde semester på IKT-studiet. Dette har samtidigt til formål at skabe praktisk erfaringen inden for agil softwareudvikling, og dertilhørende til, test, versionsstyring mv.\\
-Igennem udviklingen er der anvendt en afart af SCRUM for at holde projektet agilt, ligeledes er der anvendt jenkins til contionous integration og git for versionsstyring. \\
-Der er blevet udviklet en funktionel prototype af et kassesystem, som overholder projektets krav og specifikationer. Dette kassesystem er blevet udviklet over 5 itterationer over 14 uger.
-
+Dette projekt er udviklet af seks studerende fra Ingeniørhøjskolen I Aarhus (Aarhus Universitet). Formålet er at lave et tværfagligt projekt, der dækker over de 5 udbudte kurser på IKT-studiets 4. semester. Dette har samtidigt haft til formål at skabe praktisk erfaringen inden for agil softwareudvikling, og dertilhørende test, versionsstyring mm.\\
+Igennem udviklingen er der anvendt en afart af SCRUM for at holde projektet agilt, dette er benyttet sammen med en iterativ udviklingsmetode, og har sikret at det har været muligt at udvikle de forskellige projektdele sideløbende. Der er anvendt jenkins til continous integration samt til at holde styr på CodeCoverage og git for versionsstyring. \\
+Der er blevet udviklet en funktionel prototype af et kassesystem, som overholder projektets krav og specifikationer. Dette kassesystem er blevet udviklet over 5 iterationer med en total længde på 14 uger. Kassesystemet indeholder 3 individuelle systemer, hhv. kasseapparat, centralserver og administrationssystem samt en pakke der indeholder fælles logik. 
+Til at opsætte grænsefladen på kasseapparatet samt administrationssystemet er der benyttet WPF i C#. De data der vises på grænsefladerne er gemt i en database igennem centralserveren ved brug af Entity Framework. \\
 Måske mere konklusion?
 
 
 \section*{Abstract}
-This projet is developed by six students from Aarhus School of Engineering (Aarhus University). The purpose is to create a interdisciplinary projekt that covers the five courses that has been offered at the 4th semester on the ICT-studies. More than that, this project has the purpose of giving practical experience within agile softwaredevelopment, including but not limited to tests, version control and so forth.\\
-Through the development a variant of SCRUM has been used to keep the project agile, contempary jenkins has been used for continous integration and git for version control.\\
-A functional prototype of a point-of-sale system has been developed which comply with with projects demands and specifications. This point-of-sale system has been developed over 5 itterations through 14 weeks.
+This projet has been developed by six students from Aarhus School of Engineering (Aarhus University). The purpose is to create a interdisciplinary projekt that covers the five courses that has been offered at the 4th semester on the ICT-studies. More than that, this project has the purpose of giving practical experience within agile softwaredevelopment, including but not limited to tests, version control and so forth.\\
+Through the development a variant of SCRUM has been used to keep the project agile, contemprary jenkins has been used for continous integration and git for version control.\\
+A functional prototype of a point-of-sale system has been developed which comply with with projects demands and specifications. This point-of-sale system has been developed over 5 itterations through 14 weeks. The point-of-sale system has been developed using 3 individuel systems, Checkout counter, centralserver and administrationssystem and a shared package containing common logic.
 
 Conclusionshizzle?
